--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "billsplitter",
-  "short_name": "billsplitter",
+  "name": "Go Dutch",
+  "short_name": "Go Dutch",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
