--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "preact build",
     "serve": "preact build && preact serve",
     "dev": "preact watch",
-    "test": "jest ./tests"
+    "test": "jest ./tests",
+    "deploy": "preact build && rsync -r build/ jjanzic.com:sites/pub/godutch"
   },
   "devDependencies": {
     "identity-obj-proxy": "^3.0.0",
